# ff6recompress-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: aplib.rs  checked_get.rs  error.rs  get_checked.rs  hash.rs  hex.rs  json.rs  lzss.rs  main.rs  rom.rs  util.rs
src/rom/: aplib.rs  error.rs  hex_to.rs  json.rs  lzss.rs
