[package]
name = "ff6recompress"
version = "0.1.0"
#edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-traits = "0.2.14"
serde_json = "1.0"
thiserror = "1.0"
[dependencies.apultra]
path = "apultra-rs"
