[package]
name = "ff6recompress"
version = "0.1.0"
authors = ["Aaron Myles Landwehr <snaphat@gmail.com>"]
#edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
num-traits = "0.2"
paste= "1"
serde_json = "1"
thiserror = "1"
[dependencies.apultra]
path = "apultra-rs"
